# g2o_slim_EDU

./: .gitignore  CMakeLists.txt  README.md
.metadata/.plugins/org.eclipse.cdt.core/: core.language.settings.xml  language.settings.xml  sparse.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: .snap
.metadata/.plugins/org.eclipse.core.resources/.projects/core/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/core/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/core/.indexes/a8/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/core/.indexes/e4/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/core/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/sparse/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/sparse/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/sparse/.indexes/a8/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/sparse/.indexes/e4/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/sparse/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/4/14/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.istin-k53sj_19/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.istin-k53sj_19/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.istin-k53sj_19/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
core/: .cproject  CMakeLists.txt  README.md
core/data/: cppB_INT.txt  cppH_INT.txt  world_ODOM_ONLY.g2o  world_ODOM_ONLY_LITE.g2o  world_odom_10steps.g2o  world_odom_10steps_initial_guess.g2o  world_odom_3poses.g2o  world_odom_3poses_initial_guess.g2o  world_odom_loop_closures.g2o
core/include/: Edge.hpp  Graph.h  SparseSolver.h  Vertex.hpp
core/src/: Graph.cpp  SparseSolver.cpp  tls_main.cpp
data/: chol_lower_AMD.txt  chol_upper_AMD.txt  h_AMD.txt  world.g2o  world_odom_10kp_OL.g2o  world_odom_2000p_CL_initial_guess.g2o  world_odom_200p_CL.g2o  world_odom_5000p_OL.g2o  world_odom_500p_CL.g2o  world_odom_500p_CL_initial_guess.g2o  world_odom_50p_CL.g2o  world_updated.g2o
sparse/: .cproject  .project  CMakeLists.txt  README.md
sparse/data/: cpp_L_export.txt  small_blockable_data.txt  small_sparse_matrix.txt  sparse_data_RHS.txt
sparse/include/: RHSVector.h  RHSVector.hpp  SparseBlockMatrix.h  SparseBlockMatrix.hpp  SparseMatrix.h  defs.h  utilities.h
sparse/src/: SparseMatrix.cpp  test.cpp  utilities.cpp
sparse_ordering/: .cproject  .project  CMakeLists.txt
sparse_ordering/data/: chol_lower_AMD.txt  chol_upper_AMD.txt  h_AMD.txt  h_PLAIN_CSFORMAT.txt  sphere.g2o  view_g2o_data.sh  world_inital_guess.g2o  world_odom_2000p_CL.g20  world_odom_500p_OL.g2o  world_updated.g2o
sparse_ordering/include/: Edge.h  Factor.h  Graph.h  SparseBlockMatrix.h  SparseOptimizer.h  Vertex.h  Workspace.h  defs.h
sparse_ordering/src/: Edge.cpp  Factor.cpp  Graph.cpp  SparseBlockMatrix.cpp  SparseOptimizer.cpp  Vertex.cpp  Workspace.cpp  test.cpp
src/: CMakeLists.txt  edge.cpp  factor.cpp  factor.h  graph.cpp  graph.h  sparse_block_matrix.cpp  sparse_block_matrix.h  sparse_optimizer.cpp  sparse_optimizer.h  vertex.cpp  workspace.cpp  workspace.h
unittests/: CMakeLists.txt  ordering_test.cpp
